--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"wxr-study-station",
-    "subTitle":"wxr-study-station",
+    "title":"舟舟的技术博客",
+    "subTitle":"我是舟舟，我将持续记录我的学习记录！",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last"
 }
