--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"舟舟的技术博客",
     "subTitle":"我是舟舟，我将持续记录我的学习记录！",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"https://puui.qpic.cn/vpic_cover/e3160m4tkf0/e3160m4tkf0_vt.jpg/720",
     "GMEEK_VERSION":"last"
 }
