--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"舟舟的技术博客",
     "subTitle":"我是舟舟，我将持续记录我的学习记录！！",
-    "avatarUrl":"",
+    "avatarUrl":"https://bkimg.cdn.bcebos.com/pic/c9fcc3cec3fdfc03ffdc8181dc3f8794a4c22666?x-bce-process=image/format,f_auto/watermark,image_d2F0ZXIvYmFpa2UyNzI,g_7,xp_5,yp_5,P_20/resize,m_lfit,limit_1,h_1080",
     "GMEEK_VERSION":"last"
 }
